# chatty-rs

./: .gitignore  Cargo.toml  README.md
clients/: Cargo.toml  index.html  trunk.toml
clients/src/: chatbox.rs  input.rs  main.rs  messages.rs
clients/tailwind/: tailwind.config.js
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
