[package]
name = "clients"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
gloo-net = { version="0.2", features=["json"] }
gloo-timers = "0.2.6"
lazy_static = "1.4.0"
serde_json = "1.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version ="0.3.61", features=["HtmlDivElement"] }
yew = { version = "0.20", features=["csr"] }

[dependencies.shared]
path = "../shared"